[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit>=0.1.54",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.4.10",
    "uvicorn>=0.35.0",
]
